two other issues with curve caps #35039

Closed
opened 2013-04-20 12:46:23 +02:00 by Alexander N. · 6 comments
Member

%%%--- Operating System, Graphics card ---
Windows 64 SP1 64bit, intel i3770 internal GPU

- Blender version with error, and version that worked ---

blender-2.65a-windows64.zip - with issues
blender-2.66a-windows64.zip - with issues
blender-2.66-r56175-win64.zip - with issues

- Short description of error ---

two issues in modeling (and one maybe indirect related to the GPU)

  1. if you have a cyclic curve with a bevel object and you have "fill caps" selected by accident, your curve will have caps inside its object. you will notice it, specially, when you convert that curve to a mesh object.

  2. if you have a non-cyclic (opened) curve with a bevel object and you turn the Curve.resolution_u way up to an extreme value e.g.: 20000, your opened ends of the curve points to a strange angle. this angle alternates, when you in-/decrease that value slightly.

(3.) i know, these are two issues that happens by your own fault, but i think this is also related to an other issue
maybe fixing these two issues will fix the third as well...

http://projects.blender.org/tracker/index.php?func=detail&aid=34464

please watch this video, it will show all three issues...
http://www.sendspace.com/file/gm0487

  • the most visible issue is that with the intel GPU and the strange lines only appear on closed cyclic curves with bevel - it disappear immediately when i convert that curve to a mesh object.

  • the two issue with the caps of the curve.

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---
      to 1.
      open the attached blend file "issue - caps on cyclic curve1.blend"
      with the cyclic curve selected (be sure the "fill caps" option is checked)
      and hit [Alt]+- to convert the selected curve to mesh...
      ... in wireframe mode, you can see, that inside the object are caps inserted.

to 2.
open the attached blend file "issue - caps on open curve2.blend"
with the opened curve selected,
play a bit with an very high value of Curve.resolution_u 19000..20000 (you have to click in this field, to be able to putin such an extreme high value)...
... you will see, how the angle of the curves cap will flip/wobble.

(to 3. this issue happends only on use with internal GPU of intel i3770 CPU. most of you can not see/reproduce that issue)%%%

%%%--- Operating System, Graphics card --- Windows 64 SP1 64bit, intel i3770 internal GPU - Blender version with error, and version that worked --- blender-2.65a-windows64.zip - with issues blender-2.66a-windows64.zip - with issues blender-2.66-r56175-win64.zip - with issues - Short description of error --- two issues in modeling (and one maybe indirect related to the GPU) 1. if you have a cyclic curve with a bevel object and you have "fill caps" selected by accident, your curve will have caps inside its object. you will notice it, specially, when you convert that curve to a mesh object. 2. if you have a non-cyclic (opened) curve with a bevel object and you turn the Curve.resolution_u way up to an extreme value e.g.: 20000, your opened ends of the curve points to a strange angle. this angle alternates, when you in-/decrease that value slightly. (3.) i know, these are two issues that happens by your own fault, but i think this is also related to an other issue maybe fixing these two issues will fix the third as well... http://projects.blender.org/tracker/index.php?func=detail&aid=34464 please watch this video, it will show all three issues... http://www.sendspace.com/file/gm0487 - the most visible issue is that with the intel GPU and the strange lines only appear on closed cyclic curves with bevel - it disappear immediately when i convert that curve to a mesh object. - the two issue with the caps of the curve. - Steps for others to reproduce the error (preferably based on attached .blend file) --- to 1. open the attached blend file "issue - caps on cyclic curve1.blend" with the cyclic curve selected (be sure the "fill caps" option is checked) and hit [Alt]+- [x] to convert the selected curve to mesh... ... in wireframe mode, you can see, that inside the object are caps inserted. to 2. open the attached blend file "issue - caps on open curve2.blend" with the opened curve selected, play a bit with an very high value of Curve.resolution_u 19000..20000 (you have to click in this field, to be able to putin such an extreme high value)... ... you will see, how the angle of the curves cap will flip/wobble. (to 3. this issue happends only on use with internal GPU of intel i3770 CPU. most of you can not see/reproduce that issue)%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I don't know why we allow such extreme subdivision for curves in the first place... 100 would be a very sane max for ui.

Skipping caps for cyclic curves is a simple fix.%%%

%%%I don't know why we allow such extreme subdivision for curves in the first place... 100 would be a very sane max for ui. Skipping caps for cyclic curves is a simple fix.%%%
Author
Member

%%%i only was using that high value for resolution_u and wrong using of "fill caps" only to figure out some possible reasons,
how and why that strange lines appease on my i3770 (HD4000) only while the object is a curve, and disappear immediately as soon i convert that object to a mesh.

so these were my candidates

  • the caps in cyclic curves - (not only when the fill caps option is checked - it looks like there is something else going on like this, even that option is unchecked).
  • what is different on drawing a curve with bevel and drawing a mesh with the exact same vertices/edges in the 3D view (by convert to mesh) - on curves i have visible issues, on mesh not.

and that with the cap ends on opened curves - maybe there is something else incorrect programmed/handled generally, that isn't appearing on small common values, but goes out of control on extreme situations - perhaps there are other things affected from, that will be fixed, when that is fixed...%%%

%%%i only was using that high value for resolution_u and wrong using of "fill caps" only to figure out some possible reasons, how and why that strange lines appease on my i3770 (HD4000) only while the object is a curve, and disappear immediately as soon i convert that object to a mesh. so these were my candidates - the caps in cyclic curves - (not only when the fill caps option is checked - it looks like there is something else going on like this, even that option is unchecked). - what is different on drawing a curve with bevel and drawing a mesh with the exact same vertices/edges in the 3D view (by convert to mesh) - on curves i have visible issues, on mesh not. and that with the cap ends on opened curves - maybe there is something else incorrect programmed/handled generally, that isn't appearing on small common values, but goes out of control on extreme situations - perhaps there are other things affected from, that will be fixed, when that is fixed...%%%
Author
Member

%%%an additional comment to my previous one...
the strange line issue disappear also when i toggle from cyclic to an open one. so it is maybe only partially an issue of the GPU, but also an issue of the curve draw procedure.
%%%

%%%an additional comment to my previous one... the strange line issue disappear also when i toggle from cyclic to an open one. so it is maybe only partially an issue of the GPU, but also an issue of the curve draw procedure. %%%

%%%I've fixed caps+cyclic issue in svn rev56200. Also clamped hard limit of resolution to 1024. 20K for resolution is incredible insane!

As for that issue you had with lined -- it is just intel's driver failure,nothing to do from blender side. We have the same issue on linux and issue was reported to Mesa bug tracker couple of years ago. Nothing was fixed since then..

Thanks for the report, nothing else i could fix here, so closing.%%%

%%%I've fixed caps+cyclic issue in svn rev56200. Also clamped hard limit of resolution to 1024. 20K for resolution is incredible insane! As for that issue you had with lined -- it is just intel's driver failure,nothing to do from blender side. We have the same issue on linux and issue was reported to Mesa bug tracker couple of years ago. Nothing was fixed since then.. Thanks for the report, nothing else i could fix here, so closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35039
No description provided.