Fix #35039: two other issues with curve caps

- Skip filling caps if spline is cyclic
- Use hard limit of 1024 for curve resolution