source/blender/blenkernel/intern/displist.c
@@ -1530,7 +1530,7 @@ static void do_makeDispListCurveTypes(Scene *scene, Object *ob, ListBase *dispba
 								else
 									rotateBevelPiece(cu, bevp, NULL, dlb, 0.0f, widfac, fac, &data);
 
-								if (cu->bevobj && (cu->flag & CU_FILL_CAPS)) {
+								if (cu->bevobj && (cu->flag & CU_FILL_CAPS) && !(nu->flagu & CU_NURB_CYCLIC)) {
 									if (a == 1)
 										fillBevelCap(nu, dlb, cur_data - 3 * dlb->nr, &bottom_capbase);
 									if (a == steps - 1)
